assets/css/style.scss
---
---

@import "functions";
@import "variables";
@import "mixins";

html {
  height: 100%;
}

/* DIANA dark blue: 2C3E50; DIANA light blue: 3B97D3 */
/* Original padding-top was 6rem */
body {
  padding-top: 5rem;
  padding-bottom: 0;
  height: 100%;
  color: #2C3E50;

  @media (prefers-color-scheme: dark) {
    color: white;
    background-color: black;
  }

  @media only print {
    padding-top: 0;
    color: black;
  }
}

header.masthead {
  margin-bottom: 0;
  margin-top: 15px;
  .site-heading {
    padding: 25px 0px 25px;
    @media only screen and (min-width: 768px) {
      padding: 60px 0px 60px;
    }
  }
  .site-heading > h2 {
    font-size: 1.6rem;
    font-weight: 600;
    margin: 0;
    @media only screen and (min-width: 768px), only print {
      font-size: 2rem;
    }
  }
}


@media only print {
  header.masthead .site-heading {
    padding: 0;
  }
}

// Light mode
pre code {
  color: #333;
  span.na {
    color: #444;
  }
  span.pi {
    color: #000;
  }
  span.s {
    color: #070;
  }
  span.m {
    color: #550;
  }
  span.c1 {
    color: #44A;
  }
  span.nb {
    color: #963;
  }
  span.nt {
    color: #c33c3c;
  }
}

// Dark mode
@media (prefers-color-scheme: dark) {

  a {
    color: scale-color($iris-200, $lightness:50%)
  }

  a:hover {
    color: scale-color($iris-200, $lightness:20%)
  }

  header.masthead {
    .overlay {
      background-color: black;
      opacity: .4;
    }
    .site-heading {
      color: white;
    }
  }

  .card {
    background-color: inherit;
    color: inherit;
  }

  .dropdown-menu {
    background-color: $iris-200;
    .dropdown-item {
      color: white;
    }
    .dropdown-item:hover, .dropdown-item:focus {
      color: black;
    }
  }
  .projects .card-img-top {
    background-color: white;
  }
  img.header-logo {
    background-color: white;
  }

  code.highlighter-rouge {
    color: #ff9cc9;
  }
  pre code {
    color: #BBB;
    span.na {
      color: #DDD;
    }
    span.pi {
      color: #FFF;
    }
    span.s {
      color: #AFA;
    }
    span.m {
      color: #DDA;
    }
    span.c1 {
      color: #99C;
    }
    span.nb {
      color: #FDA;
    }
    span.nt {
      color: #F99;
    }
  }
}

%light-purple-header {
    color: $iris-400;
    @media (prefers-color-scheme: dark) {
      color: scale-color($iris-400, $lightness:40%)
    }
}

/* CUSTOMIZE THE CAROUSEL
-------------------------------------------------- */

/* Carousel base class */
.carousel {
  margin-bottom: 4rem;
}
/* Since positioning the image, we need to help out the caption */
.carousel-caption {
  bottom: 3rem;
  z-index: 10;
}

/* Declare heights because of positioning of img element */
.carousel-item {
  height: 32rem;
  background-color: #ffffff;
}
.carousel-item > img {
  height: 32rem;
  margin-left: auto;
  margin-right: auto;
  display: block;
}

.boxed {
  background-color: rgb(242, 244, 244) ;
  border: 2px solid black ;
  padding: 5px;
  height: 200px;
  overflow: scroll;
}
.boxedInf {
  background-color: rgb(242, 244, 244) ;
  border: 2px solid black ;
  padding: 5px;
}

/* News cards */

.row.news {
  margin-left: -20px;
  margin-right: -20px;
}

.card.news {
  width: 18rem;
  flex-grow: 1;
  border: none;
  margin: 0px 5px 25px 5px;
  border-radius: 0;

  img.card-img-top {
    border-radius: 0;
  }

  .card-body {
    padding: 0;


    .card-text.card-title {
      font-weight: bolder;
      margin: 5px 0px 5px 0px;
      a {
        @extend %light-purple-header;
      }
    }

  }
}

div#container {
  padding-bottom: 8em;
  position:relative;
  height: auto !important;
  height: 100%; // IE 6
  min-height:100%;
}

/* Custom footer */

.navbar-dark {
  @media (prefers-color-scheme: dark) {
    @include gradient-x($black, $primary, 0%, 100%);
  }
}

.footer-dark {
  @media not print {
    @include gradient-x($navbar-dark-active-color, $primary, 0%, 100%);
  }
  @media (prefers-color-scheme: dark) {
    @include gradient-x($black, $primary, 0%, 100%);
  }
  border-top-color: $iris-100;

  border-top-style: solid;
  border-top-width: 3px;
  padding-top: 0.5rem;
  padding-bottom: 1.5rem;

  padding-left: 0;
  padding-right: 0;

  @media only screen and (min-width: 768px) {
    padding-left: 1.0rem;
    padding-right: 0.5rem;
  }

  // Stick the footer to the bottom
  position: absolute;
  width: 100%;
  bottom: 0;

  a {
    @media not print {
      color: $navbar-dark-active-color;

      @include hover-focus {
        color: $navbar-dark-hover-color;
      }
    }
  }

  .footer-text {
    @media not print {
      color: $navbar-dark-active-color;
      text-shadow: 0px 0px 10px $primary;
    }
    font-size: smaller;
    @media only screen and (min-width: 400px), only print {
      font-size: medium;
    }

  }

  .footer-logos {
    display: flex;
    flex-direction: column;
    @media only screen and (min-width: 768px), only print {
      flex-direction: row;
    }

    img {
      width: 32px;
      height: 32px;
      @media only screen and (min-width: 400px), only print {
        width: 64px;
        height: 64px;
      }
    }

    .footer-logo {
      margin-right: 0.5rem;
      margin-top: 0.5rem;
      margin-bottom: 0.5rem;
      justify-content: center;
    }
  }

  .footer-vertical-center {
    display: flex;
    flex-direction: column;
    justify-content: center;

  }

  .footer-buttons {
    width:33px;
    @media only screen and (min-width: 991px) {
      width:66px;
    }
    @media only print {
      display: none;
    }
  }

}

// Header

.mainpage-all {
  display: flex;
  flex-flow: column;
  @media only screen and (min-width: 768px) {
    flex-flow: row wrap;
  }
}

.mainpage-all > * {
  flex: 1 100%;
}

@media only screen and (min-width: 768px) {
  .mainpage-main {
    flex: 2 0px;
    margin-right: 10px;
  }
}

main {
  padding-top: 0px;
}

@media only screen and (min-width: 768px) {
  main {
    padding-top: 30px;
  }
}

// Sidebar

.mainpage-sidebar {
  padding: 0px;
  @media only screen and (min-width: 768px) {
    flex: 1 0px;

    padding: 0 8px 0 8px;

  }

  .mainpage-sidebar-links {
    text-align: right;
    margin-top: -10px;
  }

  .mainpage-core h4 {
    @extend %light-purple-header;
    font-size: 1.3rem;
    margin-bottom: .2rem;
  }

  ul {
    margin-top: 0.5rem;
    margin-bottom: 1rem;
    padding: 0px;
    list-style: none;
  }

  .event, .empty {
    display: flex;
    flex-flow: row wrap;
    margin: 5px 0 10px 0;
    background-color: scale-color($iris-100, $lightness:60%);
    border-radius: 6px;

    .date, .location {
      color: white;
    }

    .date {
      background-color: $iris-400;
      border-radius: 6px 0px 0px 0px;
      flex: 0 2 35%;
      font-size: 0.8rem;
      padding: 0 5px 0 10px;
    }

    .location {
      background-color: $iris-400;
      border-radius: 0px 6px 0px 0px;
      flex: 0 3 65%;
      text-align: right;
      font-style: italic;
      font-size: 0.8rem;
      padding: 0 10px 0 5px;
    }

    .name, .projects {
      flex: 0 1 100%;
      font-size: 1.1rem;
      padding: 0 10px 0 10px;
      color: black;
    }

    .projects p {
      margin-top: .5rem;
      margin-bottom: .5rem;
      text-align: center;
      color: $iris-200;

      a {
        color: black;
      }
    }
  }
  .empty {
    padding: 4px 8px 4px 8px;
  }
}

.mainpage-core {
  margin: 10px 0 30px 0;
}


.post {
  .iris-post-footer {
    clear: both;
    padding-top: 20px;
    padding-bottom: 20px;
    @media only screen and (min-width: 768px), only print {
      margin-top: 40px;
    }
  }

  img.banner {
    width: 100%;
    padding-bottom: 20px;
  }

  figure a img {
    width: 100%;
  }

  figure.right {
    margin-left: auto;
    margin-right: auto;
    width: 90%;
    @media only screen and (min-width: 991px), only print {
      float: right;
      width: 50%;
      margin-left: 20px;
    }
  }

  figure.center {
    margin-left: auto;
    margin-right: auto;
    width: 90%;
    @media only screen and (min-width: 991px), only print {
      width: 70%;
    }
  }

  figure.caption {
    @media only screen and (min-width: 991px), only print {
      padding: 6px;
      background-color: scale-color($iris-100, $lightness:60%);
      @media (prefers-color-scheme: dark) {
        background-color: $iris-100
      }
      border-radius: 6px;
    }

    a img {
      @media only screen and (min-width: 991px), only print {
        border-radius: 6px 6px 0px 0px;
      }
      margin-bottom: 6px;
    }
  }
  a img {
    width: 100%;
  }
}

div#covid {
  background-color: #ff7e7a;
  color: black;
  text-align: center;
  font-weight: 700;
  font-size: large;
  padding: 3px;
  @media (prefers-color-scheme: dark) {
    color: white;
    background-color: #af0500;
    a {
      color: #4ec0ff;
    }
  }
}

.mainpage-sidebar-twitter {
  text-align: center;
}

#twitter-widget-0 {
  max-width: 340px !important;
}

